[Downloads] Correctly test page transition when calculating danger level.

One of the heuristics used to minimize spurious dangerous download
warnings is to check if the navigation that resulted in the download was
initiated via the Omnibox. The test was incorrectly checking if a
ui::PageTransition value was equal to PAGE_TRANSITION_FROM_ADDRESS_BAR.
However, PAGE_TRANSITION_FROM_ADDRESS_BAR is a bit mask that can
accompany multiple core page transition types. This CL fixes the code to
correctly check the single bit.

R=pkasting@chromium.org
BUG=622834

Review-Url: https://codereview.chromium.org/2090013006
Cr-Commit-Position: refs/heads/master@{#403792}

Former-commit-id: 1e639fd737e70a09c363d8342c1af3b9d3143280